log
Sat, Apr 19, 2025  6:36:07 PM: 
 tests:  0|6
total_score: 0/70
eeef3b7
Sat, Apr 19, 2025  7:45:30 PM: 
 hashmap.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
eada24c
Sat, Apr 19, 2025  7:45:53 PM: 
 hashmap.c | 1 -
 1 file changed, 1 deletion(-)
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'createMap':
hashmap.c:60:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
52843ab
Sat, Apr 19, 2025  7:46:15 PM: 
 hashmap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  0|0
2407bf1
Sat, Apr 19, 2025  7:47:42 PM: 
 hashmap.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
5566438
Sat, Apr 19, 2025  7:47:58 PM: 
 hashmap.c | 4 +---
 1 file changed, 1 insertion(+), 3 deletions(-)
 tests:  0|6
total_score: 0/70
26a03d7
Sat, Apr 19, 2025  7:48:15 PM: 
 hashmap.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
0d5908e
Sat, Apr 19, 2025  7:55:13 PM: 
 hashmap.c | 13 +++++++++++++
 1 file changed, 13 insertions(+)
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'insertMap':
hashmap.c:58:1: error: expected 'while' before '}' token
 }
 ^
test.c:453:5: error: 'main' is normally a non-static function [-Werror=main]
 int main( int argc, char *argv[] ) {
     ^~~~
test.c:511:1: error: expected declaration or statement at end of input
 }
 ^
In file included from test.c:4:0:
hashmap.c:44:10: error: unused variable 'copiaindice' [-Werror=unused-variable]
     long copiaindice = indice;
          ^~~~~~~~~~~
At top level:
test.c:453:5: error: 'main' defined but not used [-Werror=unused-function]
 int main( int argc, char *argv[] ) {
     ^~~~
test.c:217:5: error: 'insert_test5' defined but not used [-Werror=unused-function]
 int insert_test5(){ //factor de carga>0.7, se llama a función enlarge
     ^~~~~~~~~~~~
test.c:131:6: error: 'compare_test' defined but not used [-Werror=unused-function]
 void compare_test(){
      ^~~~~~~~~~~~
test.c:125:6: error: 'hash_test3' defined but not used [-Werror=unused-function]
 void hash_test3(){ //no random
      ^~~~~~~~~~
test.c:111:6: error: 'hash_test2' defined but not used [-Werror=unused-function]
 void hash_test2(){ // colisiones
      ^~~~~~~~~~
test.c:100:6: error: 'hash_test1' defined but not used [-Werror=unused-function]
 void hash_test1(){ // posición válida
      ^~~~~~~~~~
cc1.exe: all warnings being treated as errors
886e200
Sat, Apr 19, 2025  7:56:15 PM: 
 hashmap.c | 9 +++++----
 1 file changed, 5 insertions(+), 4 deletions(-)
 tests:  1|5
total_score: 10/70
a7d4e31
Sat, Apr 19, 2025  7:56:47 PM: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  1|5
total_score: 10/70
b4de658
Sat, Apr 19, 2025  7:59:12 PM: 
 hashmap.c | 6 ++++++
 1 file changed, 6 insertions(+)
 tests:  0|0
095df0c
Sat, Apr 19, 2025  7:59:51 PM: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  5|4
total_score: 30/70
9d24e87
Sat, Apr 19, 2025  8:06:34 PM: 
 hashmap.c | 14 ++++++++++++++
 1 file changed, 14 insertions(+)
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'searchMap':
hashmap.c:95:37: error: 'return' with no value, in function returning non-void [-Werror]
     if (map == NULL || key == NULL) return;
                                     ^~~~~~
hashmap.c:94:8: note: declared here
 Pair * searchMap(HashMap * map,  char * key) {
        ^~~~~~~~~
cc1.exe: all warnings being treated as errors
f6444c2
Sat, Apr 19, 2025  8:06:51 PM: 
 hashmap.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  8|3
total_score: 40/70
c37d3bb
Sat, Apr 19, 2025  8:07:46 PM: 
 hashmap.c | 17 +++++++++++++++++
 1 file changed, 17 insertions(+)
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'eraseMap':
hashmap.c:96:41: error: 'return' with a value, in function returning void [-Werror]
         if (currentPair == NULL) return NULL;
                                         ^~~~
hashmap.c:89:6: note: declared here
 void eraseMap(HashMap * map,  char * key) {
      ^~~~~~~~
hashmap.c:100:20: error: 'return' with a value, in function returning void [-Werror]
             return currentPair;
                    ^~~~~~~~~~~
hashmap.c:89:6: note: declared here
 void eraseMap(HashMap * map,  char * key) {
      ^~~~~~~~
hashmap.c:106:12: error: 'return' with a value, in function returning void [-Werror]
     return NULL;
            ^~~~
hashmap.c:89:6: note: declared here
 void eraseMap(HashMap * map,  char * key) {
      ^~~~~~~~
cc1.exe: all warnings being treated as errors
1206a04
Sat, Apr 19, 2025  8:07:58 PM: 
 hashmap.c | 3 ---
 1 file changed, 3 deletions(-)
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'eraseMap':
hashmap.c:96:41: error: 'return' with a value, in function returning void [-Werror]
         if (currentPair == NULL) return NULL;
                                         ^~~~
hashmap.c:89:6: note: declared here
 void eraseMap(HashMap * map,  char * key) {
      ^~~~~~~~
hashmap.c:100:20: error: 'return' with a value, in function returning void [-Werror]
             return currentPair;
                    ^~~~~~~~~~~
hashmap.c:89:6: note: declared here
 void eraseMap(HashMap * map,  char * key) {
      ^~~~~~~~
cc1.exe: all warnings being treated as errors
8cbf8fc
